# ezytutor

./: .gitignore  Cargo.toml
tutor-db/: Cargo.toml  database.sql
tutor-db/dbscripts/: course.sql  tutor.sql  user.sql
tutor-db/src/: database.sql  errors.rs  lib.rs  routes.rs
tutor-db/src/dbaccess/: course.rs  tutor.rs
tutor-db/src/handlers/: course.rs  general.rs  tutor.rs
tutor-db/src/models/: course.rs  tutor.rs
tutor-db/static/: index.html  register.html  styles.css  tutor-styles.css  tutors.html
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs
