[package]
name = "tutor_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.3"
actix-files="0.5.0"
serde = {version = "1.0.136", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
sqlx = { version = "0.4", features = [ "runtime-actix-native-tls" , "postgres", "chrono" ] }
openssl = { version = "0.10", features = ["vendored"]}
tera = "1.8.0"